--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,48 @@
 body {
   margin: 0;
   padding: 0;
-  color: white;
+  background-color: rgb(33, 28, 28);
 }
-.background {
-  width: 100%;
-  filter: blur(6px);
-  position: absolute;
-  z-index: -1;
-}
+
 .container {
   justify-content: center;
   align-items: center;
   position: absolute;
   top: 10%;
   width: 100%;
-  background-color: rgb(0, 0, 0, 0.4);
-  height: 40rem;
+  height: auto;
   border-radius: 6px;
-  overflow-y: auto;
+
   padding: 1rem;
 }
+
+.widgets {
+  height: 30rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.5rem;
+}
+
 #yt-lofi {
   position: relative;
   width: 60%;
   height: auto;
   left: 20%;
-  margin-top: 2rem;
 }
+
+/* Timer Settings */
+
 .timer-container {
   display: block;
-  margin: auto;
-  margin-top: 12rem;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  color: white;
   background-color: rgba(255, 29, 29, 0.959);
-  width: 35%;
+  width: 30%;
+  height: 16rem;
   border-radius: 16px;
   border: 1px solid white;
   padding: 1rem;
@@ -86,15 +91,75 @@ body {
   display: flex;
   justify-content: center;
 }
-.widgets {
-  height: 40rem;
+
+/* Google */
+.google {
+  margin-top: 4rem;
+}
+
+/* To Do Content */
+
+.to-do-container {
+  width: 36%;
+  height: 16rem;
+  border-radius: 16px;
+  background-color: rgb(0, 82, 235);
+  border: solid 1px white;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  margin-top: 0.5rem;
-  padding: 1.5rem;
+  color: white;
 }
-.youtube {
-  margin-top: 4rem;
+.to-do-container ul {
+  max-height: 6rem;
+  overflow-y: auto;
+}
+.to-do-container h2 {
+  text-align: center;
+}
+.add-to-do {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
+.add-btn {
+  width: 12%;
+  height: auto;
+  margin: auto;
+  background-color: white;
+  border-radius: 50%;
+}
+ul {
+  padding: 0;
+  width: 90%;
+  margin: auto;
+}
+li {
+  color: rgb(0, 0, 0);
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
+  background-color: rgba(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 16px;
+}
+li p {
+  overflow-x: auto;
+  padding: 1.2rem;
+  font-weight: 700;
+}
+.close {
+  font-size: 1.3em;
+  padding: 1rem;
+  cursor: pointer;
+}
+.close:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+#input-text {
+  border-radius: 16px;
+  width: 60%;
+  height: 40px;
+  padding: 0.3rem;
 }
