--- a/styles.css
+++ b/styles.css
@@ -258,11 +258,10 @@ li p {
   }
   .widgets {
     width: 100%;
-    height: 25rem;
+    height: auto;
     margin-top: 1.5rem;
     display: grid;
     grid-template-columns: auto;
-    overflow-y: auto;
     background-color: rgba(0, 0, 0, 0.433);
   }
   .to-do-container ul {
